pip 설정 메뉴 적용

--- a/ShopLiveDemo/Sample/en.lproj/shoplive.strings
+++ b/ShopLiveDemo/Sample/en.lproj/shoplive.strings
@@ -45,12 +45,17 @@
 "campaign.menu.write" = "직접 입력";
 "campaign.menu.deleteall" = "전체삭제";
 "campaign.msg.wrongurl" = "잘못된 url 입니다.";
+"sdkoption.section.pip.title" = "PIP (Picture in Picture)";
 "sdkoption.section.autoPlay.title" = "자동재생";
 "sdkoption.section.share.title" = "공유하기";
 "sdkoption.section.progress.title" = "로딩 프로그레스";
 "sdkoption.section.chatFont.title" = "채팅 폰트";
-"sdkoption.headphoneOption1.title" = "이어폰/헤드셋 옵션";
-"sdkoption.headphoneOption1.description" = "이어폰/헤드셋 연결이 끊기면 영상을 멈추지 않습니다.";
+"sdkoption.pipPosition.title" = "PIP Position";
+"sdkoption.pipPosition.description" = "PIP 모드가 시작될 때 위치입니다. (기본은 bottomRight)";
+"sdkoption.pipScale.title" = "PIP Scale";
+"sdkoption.pipScale.description" = "PIP 모드 화면의 Scale입니다.\n화면 width 기준으로 scale 된 사이즈 (0 ~ 1 사이의 값)로 표시";
+"sdkoption.pipScale.title" = "이어폰/헤드셋 옵션";
+"sdkoption.pipScale.description" = "이어폰/헤드셋 연결이 끊기면 영상을 멈추지 않습니다.";
 "sdkoption.callOption.title" = "통화 옵션";
 "sdkoption.callOption.description" = "통화 종료 후, 영상을 자동으로 재생합니다.";
 "sdkoption.customShare.title" = "커스텀 공유하기 사용";
