인증 선택 UI 적용, 유저정보 입력 화면 (User / JWT 구분)

--- a/ShopLiveDemo/Sample/ko.lproj/shoplive.strings
+++ b/ShopLiveDemo/Sample/ko.lproj/shoplive.strings
@@ -16,8 +16,10 @@
 "sdk.preview" = "미리보기";
 "sdk.user.delete" = "지우기";
 "sdk.user.save" = "저장";
+"sdk.user.secret.add" = "추가";
 "menu.campaigns" = "방송 목록 관리";
 "menu.userinfo" = "유저 정보 입력";
+"menu.userinfo.secretkey" = "시크릿키 관리";
 "menu.options" = "옵션 설정";
 "menu.exit" = "방송 나가기(PIP 종료)";
 "menu.coupon" = "쿠폰 응답 설정";
@@ -29,22 +31,33 @@
 "base.section.userinfo.none.title" = "유저 정보를 입력해 보세요.";
 "base.section.userinfo.button.chooseCampaign.input.title" = "입력";
 "base.section.userinfo.button.chooseCampaign.change.title" = "변경";
+"userinfo.auth.type.common" = "일반 인증";
+"userinfo.auth.type.jwt" = "JWT 토큰 인증";
 "userinfo.userid.placeholder" = "userId(필수)";
 "userinfo.userName.placeholder" = "userName";
 "userinfo.age.placeholder" = "age";
 "userinfo.userScore.placeholder" = "userScore";
+"userinfo.authToken.title" = "[Auth Token]";
 "userinfo.gender.male" = "남";
 "userinfo.gender.female" = "여";
 "userinfo.gender.none" = "선택안함";
+"userinfo.jwt.button.usersave" = "유저정보 저장하기";
 "userinfo.jwt.result.message" = "JWT 생성 안됨";
-"userinfo.jwt.button.generate" = "JWT 생성하기";
+"userinfo.jwt.button.generate" = "JWT 생성 및 저장하기";
 "userinfo.new.button.save" = "저장하기";
 "userinfo.msg.save.success" = "저장 되었습니다.";
-"userinfo.msg.save.failed.noneId" = "userId는 필수입니다.";
+"userinfo.msg.save.failed.noneId" = "userId는 필수 입니다.";
+"userinfo.msg.save.failed.noneToken" = "생성된 토큰이 없습니다.";
+"userinfo.msg.save.failed.sameInfo" = "이미 생성된 토큰입니다.";
 "userinfo.msg.deleteAll.title" = "유저 정보를 모두 삭제 하시겠습니까?";
+"userinfo.button.chooseSecret.input.title" = "입력";
+"userinfo.button.chooseSecret.change.title" = "변경";
+"userinfo.alert.placeholder.customer.title" = "고객사";
+"userinfo.alert.placeholder.secretKey.title" = "시크릿키";
 "campaign.menu.write" = "직접 입력";
 "campaign.menu.deleteall" = "전체삭제";
 "campaign.msg.wrongurl" = "잘못된 url 입니다.";
+"campaign.msg.deleteAll.title" = "캠페인을 모두 삭제 하시겠습니까?";
 "sdkoption.section.pip.title" = "PIP (Picture in Picture)";
 "sdkoption.section.autoPlay.title" = "자동재생";
 "sdkoption.section.share.title" = "공유하기";
