--- a/ShopLiveDemo/Sample/en.lproj/shoplive.strings
+++ b/ShopLiveDemo/Sample/en.lproj/shoplive.strings
@@ -24,6 +24,7 @@
 "menu.exit" = "방송 나가기(PIP 종료)";
 "menu.coupon" = "쿠폰 응답 설정";
 "menu.removeCache" = "웹 스토리지 데이터 삭제";
+"menu.msg.removeCache" = "웹 스토리지 데이터를 삭제 했습니다.";
 "base.section.campaignInfo.title" = "방송정보";
 "base.section.campaignInfo.campaign.none.title" = "선택된 방송이 없습니다.";
 "base.section.campaignInof.button.chooseCampaign.title" = "방송 선택";
@@ -49,6 +50,7 @@
 "userinfo.msg.save.failed.noneId" = "userId는 필수 입니다.";
 "userinfo.msg.save.failed.noneToken" = "생성된 토큰이 없습니다.";
 "userinfo.msg.save.failed.sameInfo" = "이미 생성된 토큰입니다.";
+"userinfo.msg.save.failed.secret.notselected" = "선택된 시크릿키가 없습니다.";
 "userinfo.msg.deleteAll.title" = "유저 정보를 모두 삭제 하시겠습니까?";
 "userinfo.button.chooseSecret.input.title" = "입력";
 "userinfo.button.chooseSecret.change.title" = "변경";
