--- a/ShopLiveDemo/Sample/en.lproj/shoplive.strings
+++ b/ShopLiveDemo/Sample/en.lproj/shoplive.strings
@@ -60,6 +60,8 @@
 "campaign.menu.deleteall" = "전체삭제";
 "campaign.msg.deleteAll.title" = "캠페인을 모두 삭제 하시겠습니까?";
 "campaign.msg.wrongurl" = "잘못된 url 입니다.";
+"campaign.input.accesskey.placeholder" = "accessKey";
+"campaign.input.campaignkey.placeholder" = "campaignKey";
 "sdkoption.section.pip.title" = "PIP (Picture in Picture)";
 "sdkoption.section.autoPlay.title" = "자동재생";
 "sdkoption.section.share.title" = "공유하기";
