--- a/swift/ShopLiveSwiftSample/Sample/misc/en.lproj/shoplive.strings
+++ b/swift/ShopLiveSwiftSample/Sample/misc/en.lproj/shoplive.strings
@@ -38,6 +38,7 @@
 "userinfo.setting.simple.guide" = "Set as simple authentication.";
 "userinfo.setting.token.guide" = "Set as JWT token authentication.";
 "userinfo.setting.jwt.guide.url" = "https://en.shoplive.guide/docs/use-jwt-auth";
+"sdkoption.section.setupPlayer.title" = "Shoplive Player setting";
 "sdkoption.section.sound.title" = "Sound";
 "sdkoption.section.preview.title" = "Preview";
 "sdkoption.section.pip.title" = "PIP mode";
@@ -45,6 +46,13 @@
 "sdkoption.section.share.title" = "Sharing UI";
 "sdkoption.section.progress.title" = "Progress indicator";
 "sdkoption.section.chatFont.title" = "Using custom font";
+"sdkoption.section.setupPlayer.tabletAspect.title" = "Aspect ratio for the tablet device";
+"sdkoption.section.setupPlayer.tabletAspect.description" = "Adjust the size of the video to the screen (off) / Adjust the size of screen to the video (on)";
+"sdkoption.section.setupPlayer.keepWindowStateOnPlayExecuted.title" = "Set whether to keep the play mode (in-app PIP or full screen) when the Shoplive player is called again while the player is running ";
+"sdkoption.section.setupPlayer.keepWindowStateOnPlayExecuted.description" = "Run as full screen (false) / Always maintain current play mode (PIP or full screen) (true)
+Default false
+
+This option is valid only for the same campaign and runs on the full screen always when switching to another campaign, regardless of the setting.";
 "sdkoption.sound.mute.title" = "Muted play starts";
 "sdkoption.sound.mute.description" = "Muted when play starts video";
 "sdkoption.preview.title" = "Preview Tap to Play";
@@ -57,17 +65,28 @@
 "sdkoption.pipPosition.item4" = "Bottom Right";
 "sdkoption.pipScale.title" = "View size";
 "sdkoption.pipScale.description" = "PIP view size.\nDisplays the scaled size based on the View width. (value between 0.1 and 1.0)";
+"sdkoption.fixedPipWidth.title" = "Option to set the size of the PIP by specifying the width of the PIP";
+"sdkoption.fixedPipWidth.description" = "You can set the size of the PIP by specifying the width value.
+
+With this option, the height of the pip is set to match the ratio of the image based on the width set.
+You can set the PIP size to the same size on different devices.";
 "sdkoption.nextActionTypeOnNavigation.title" = "Synchronized Player action when user taps link";
 "sdkoption.nextActionTypeOnNavigation.description" = "Sets the synchronized Shoplive Player action when a user taps a link.";
 "sdkoption.nextActionTypeOnNavigation.guide" = "When a user taps link";
 "sdkoption.nextActionTypeOnNavigation.item1" = "Switch to PIP mode";
 "sdkoption.nextActionTypeOnNavigation.item2" = "No change";
 "sdkoption.nextActionTypeOnNavigation.item3" = "Exit";
+"sdkoption.pipKeepWindowStyle.title" = "If you switch from OS PIP to a customer app, continue playing with the previous player mode (in-app PIP or full screen mode)";
+"sdkoption.pipKeepWindowStyle.description" = "If you switch from OS PIP to a customer app, continue playing with the previous player mode (in-app PIP or full screen mode)
+True: previous mode, Default: full screen mode";
 "sdkoption.pipAreaSetting.title" = "PIP moveable area";
 "sdkoption.pipAreaSetting.description" = "Sets the PIP moveable area.";
 "sdkoption.headphoneOption1.title" = "When an earphone/headset is disconnected";
 "sdkoption.headphoneOption1.description" = "Enabling this option, the video will keep playing even if the earphone/headset is disconnected.";
 "sdkoption.headphoneOption1.setting.guide" = "Earphone or headset is disconnected";
+"sdkoption.headphoneOption2.title" = "Mute when earphone/headsets is disconnected";
+"sdkoption.headphoneOption2.description" = "Enabling this option allows you to mute earphones/headsets when they are disconnected.
+Default: keep sound, True: Mute";
 "sdkoption.callOption.title" = "When a call ended";
 "sdkoption.callOption.description" = "Enabling this option, the video will keep playing when the call ended.";
 "sdkoption.callOption.setting.guide" = "Call ended";
