--- a/swift/ShopLiveSwiftSample/Sample/misc/en.lproj/shoplive.strings
+++ b/swift/ShopLiveSwiftSample/Sample/misc/en.lproj/shoplive.strings
@@ -95,6 +95,20 @@ True: previous mode, Default: full screen mode";
 "sdkoption.pipEnableSwipeOutOption.description" = "By enabling this option, you can close InAppPip by swiping it out(default : false). This option doesn't take effect on preview";
 //화면 밖으로 PIP를 SWIPE 하는 경우 플레이어를 종료시킬지 여부를 설정합니다. preview는 해당없음. in-app pip만 적용되는 옵션입니다. (기본은 종료, 설정해제 시 종료되지 않음.)
 
+"sdkOption.pipMaxSize.title" = "PIP Max Size";
+//설정된 길이의 정사각형 안에서 영상이 잘리지 않도록 최대한 크게 보여줍니다.
+"sdkOption.pipMaxSize.description" = "Show video by aspectFit ratio within the square";
+
+"sdkOption.pipFixedHeight.title" = "PIP fixed height";
+//서로 다른 해상도의 단말에서 세로사이즈를 동일하게 유지하도록 고정 세로 길이를 설정할 수 있습니다.
+"sdkOption.pipFixedHeight.description" = "Show PIP video with fixed height regardless of device screen ratio";
+
+"sdkOption.pipFixedWidth.title" = "PIP fixed width";
+//서로 다른 해상도의 단말에서 가로사이즈를 동일하게 유지하도록 고정 가로 길이를 설정할 수 있습니다.
+"sdkOption.pipFixedWidth.description" = "Show PIP video with fixed width regardless of device screen ratio";
+
+
+
 "sdkoption.headphoneOption1.title" = "When an earphone/headset is disconnected";
 "sdkoption.headphoneOption1.description" = "Enabling this option, the video will keep playing even if the earphone/headset is disconnected.";
 "sdkoption.headphoneOption1.setting.guide" = "Earphone or headset is disconnected";
