--- a/swift/ShopLiveSwiftSample/Sample/misc/en.lproj/shoplive.strings
+++ b/swift/ShopLiveSwiftSample/Sample/misc/en.lproj/shoplive.strings
@@ -176,6 +176,7 @@ Default: keep sound, True: Mute";
 "sample.button.shortform.native" = "native ShortForm";
 "sample.button.shortform.hybrid" = "hybrid ShortForm";
 "sample.button.player.preview" = "Preview(UIView)";
+"sample.button.shortform.editor" = "ShortForm Editor";
 "sample.link.tokenGuide" = "JWT token creation guide";
 "sample.authType.user" = "Simple authentication.";
 "sample.authType.token" = "JWT token authentication.";
